Enable Error Prone and NullAway for junit-jupiter-api