@@ -1,9 +1,19 @@
+import org.jetbrains.kotlin.ir.backend.js.compile
+
 plugins {
 	id("junitbuild.kotlin-library-conventions")
 	`java-test-fixtures`
+	alias(libs.plugins.errorprone)
+	alias(libs.plugins.nullaway)
 }
 
 description = "JUnit Jupiter API"
+
+nullaway {
+	annotatedPackages.addAll(
+		"org.junit.jupiter.api.io",
+	)
+}
 
 dependencies {
 	api(platform(projects.junitBom))
@@ -13,12 +23,24 @@ dependencies {
 	compileOnlyApi(libs.apiguardian)
 
 	compileOnly(kotlin("stdlib"))
+	compileOnly(libs.errorprone.annotations)
+	compileOnly(libs.jetbrainsAnnotations)
 
 	osgiVerification(projects.junitJupiterEngine)
 	osgiVerification(projects.junitPlatformLauncher)
+
+	errorprone(libs.errorprone.core)
+	errorprone(libs.nullaway)
 }
 
 tasks {
+	compileModule {
+		options.compilerArgs.addAll(listOf(
+			"--add-modules", "com.google.errorprone.annotations,org.jetbrains.annotations",
+			"--add-reads", "${javaModuleName}=com.google.errorprone.annotations",
+			"--add-reads", "${javaModuleName}=org.jetbrains.annotations",
+		))
+	}
 	jar {
 		bundle {
 			val version = project.version
