@@ -15,6 +15,8 @@ dependencies {
 	api(projects.junitJupiterApi)
 
 	compileOnlyApi(libs.apiguardian)
+	compileOnly(libs.errorprone.annotations)
+	compileOnly(libs.jetbrainsAnnotations)
 
 	testImplementation(projects.junitPlatformLauncher)
 	testImplementation(projects.junitPlatformSuiteEngine)
@@ -32,6 +34,13 @@ dependencies {
 }
 
 tasks {
+	compileModule {
+		options.compilerArgs.addAll(listOf(
+			"--add-modules", "com.google.errorprone.annotations,org.jetbrains.annotations",
+			"--add-reads", "org.junit.jupiter.api=com.google.errorprone.annotations",
+			"--add-reads", "org.junit.jupiter.api=org.jetbrains.annotations",
+		))
+	}
 	test {
 		inputs.dir("src/test/resources").withPathSensitivity(RELATIVE)
 		systemProperty("developmentVersion", version)
